fix navbar z-index

--- a/src/scss/base/_theme-variables.scss
+++ b/src/scss/base/_theme-variables.scss
@@ -16,6 +16,8 @@ html:root {
     --rsk-navbar-height: 104px;
   }
 
+  --ifm-z-index-fixed: 2147483646;
+
   --bs-pink: #{$pink-light};
   --bs-purple: #{$purple-light};
   --bs-yellow: #{$yellow-light};
